# ml-rust

./: .gitignore  Cargo.toml  README.md  results.csv  training_data.csv
config/: generate.toml  generate_nn.toml
