[package]
name = "cat-breeds-k-means"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-machine = "0.5.4"
rand = "0.8.5"
rand_distr = "0.4.3"
csv = { version = "1.2.2", features = [] }
toml = { version = "0.8.0", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
structopt = { version = "0.3.26", features = [] }
gnuplot = "0.0.39"